--- a/presentation/index.html
+++ b/presentation/index.html
@@ -41,10 +41,13 @@
             </section>
 
             <section>
-                ### 大綱
-                - ISO 27001 要求與控制事項
-                - ISO 27001 的 PDCA 循環實施
-                - ISO 27001 文件化資訊
+                <script type="text/template"></script>
+                    ### 大綱
+                    
+                    - ISO 27001 要求與控制事項
+                    - ISO 27001 的 PDCA 循環實施
+                    - ISO 27001 文件化資訊
+                </script>
             </section>
 
             <section>
